Update project structure

--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "getKinds",
   "version": "1.0.0",
-  "main": "js/src/getKinds",
-  "dependencies": {
-    "getKind": "aleclarson/getKind#1.0.0"
+  "main": "js/getKinds",
+  "plugins": [
+    "lotus-coffee"
+  ],
+  "scripts": {
+    "build": "coffee -cb -o js src",
+    "postinstall": "postinstall-build js 'npm run build'"
   },
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ]
+  "dependencies": {
+    "getKind": "aleclarson/getKind#1.0.0",
+    "postinstall-build": "0.2.x"
+  },
+  "devDependencies": {
+    "coffee-script": "1.9.x"
   }
 }
