--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "getKinds",
-  "version": "1.0.0",
-  "main": "js/src/getKinds",
+  "version": "1.0.1",
+  "main": "js/getKinds",
+  "plugins": [
+    "lotus-coffee"
+  ],
+  "scripts": {
+    "build": "coffee-build -v 1.11.x -b -o js src",
+    "postinstall": "npm run build"
+  },
   "dependencies": {
     "getKind": "aleclarson/getKind#1.0.0"
-  },
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ]
   }
 }
